fix more spacing

--- a/app/styles/app/modules/tiles.sass
+++ b/app/styles/app/modules/tiles.sass
@@ -196,7 +196,7 @@
       @include grid-column(7)
 
 p.tile-single-line
-  padding: .6em 0
+  padding: .7em 0
   .icon--code
     width: 1.3em
     height: 1.1em
